# routes/grades.js
@@ -1,14 +1,15 @@
 const router = require('express').Router();
 const gradeController = require('../controllers/grades');
+const { authCheck } = require('../authentication/authenticate.js');
 
 router.get('/', gradeController.getAll);
 
 router.get('/:studentId', gradeController.getGradesByStudentId);
 
-router.post('/', gradeController.addGrade);
+router.post('/', authCheck, gradeController.addGrade);
 
-router.put('/:gradeId', gradeController.updateGrade);
+router.put('/:gradeId', authCheck, gradeController.updateGrade);
 
-router.delete('/:gradeId', gradeController.deleteGrade);
+router.delete('/:gradeId', authCheck, gradeController.deleteGrade);
 
 module.exports = router;
