# routes/students.js
@@ -1,14 +1,15 @@
 const router = require('express').Router();
 const studentController = require('../controllers/students');
+const { authCheck } = require('../authentication/authenticate.js');
 
 router.get('/', studentController.getAll);
 
 router.get('/:studentId', studentController.getSingle);
 
-router.post('/', studentController.createStudent);
+router.post('/', authCheck, studentController.createStudent);
 
-router.put('/:studentId', studentController.updateStudent);
+router.put('/:studentId', authCheck, studentController.updateStudent);
 
-router.delete('/:studentId', studentController.deleteStudent);
+router.delete('/:studentId', authCheck, studentController.deleteStudent);
 
 module.exports = router;
